Truncate text in sidebar to prevent overflow

--- a/_sass/_sidebar.sass
+++ b/_sass/_sidebar.sass
@@ -19,6 +19,9 @@ $sidebar-width: 300px
         width: 100%
         font-size: 16px
         text-align: left
+    .name
+        display: inline-block
+        width: 200px
     .btn-group-vertical
         border-radius: 0px
     .glyphicon
